# linters-configuration-python

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test_1.py
.github/: dependabot.yml
.github/workflows/: linters.yml  main.yml
